--- a/style.css
+++ b/style.css
@@ -55,6 +55,59 @@ img {
 }
 
 #fancy {
-    color: #FFB400;
+    color: #7f8c8d;
     text-decoration: underline;
+}
+
+.icon-bar {
+  text-align: center;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+/* Style the icon bar links */
+.icon-bar a {
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: black;
+  font-size: 20px;
+}
+
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+  /* background-color: #ffffff; */
+}
+
+.facebook {
+  /* background: #3B5998; */
+/* background: #111111; */
+}
+
+.twitter {
+  /* background: #55ACEE; */
+  /* background: #111111; */
+}
+
+.instagram {
+  /* background: #111111; */
+}
+
+/* .fa.fa-instagram {
+  color: transparent;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background-clip: text;
+  -webkit-background-clip: text;
+} */
+
+.linkedin {
+  /* background: #007bb5; */
+  /* background: #111111; */
+}
+
+.youtube {
+  /* background: #bb0000; */
+  /* background: #111111; */
 }
