--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     font-family: 'Open Sans', serif;
     color: #7f8c8d;
     background-color: #fefefe;
-    margin-top: 2em;
 }
 
 h1, h2, h3 {
@@ -48,6 +47,7 @@ img {
 
 #intro {
     font-size: 4em;
+    margin-bottom: 16px;
 }
 
 #about {
@@ -56,7 +56,6 @@ img {
 
 #fancy {
     color: #7f8c8d;
-    text-decoration: underline;
 }
 
 .icon-bar {
