--- a/style.css
+++ b/style.css
@@ -81,7 +81,12 @@ img {
 
 .facebook {
   /* background: #3B5998; */
-/* background: #111111; */
+  /* background: #111111; */
+}
+
+.snapchat {
+  /* background: #3B5998; */
+  /* background: #111111; */
 }
 
 .twitter {
