--- a/style.css
+++ b/style.css
@@ -115,3 +115,8 @@ img {
   /* background: #bb0000; */
   /* background: #111111; */
 }
+
+.youtube-play {
+  /* background: #bb0000; */
+  /* background: #111111; */
+}
