--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
   -webkit-background-clip: text;
 } */
 
-.linkedin {
+.tiktok {
   /* background: #007bb5; */
   /* background: #111111; */
 }
