--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ img {
   /* background: #111111; */
 }
 
+.x-twitter {
+  /* background: #55ACEE; */
+  /* background: #111111; */
+}
+
 .instagram {
   /* background: #111111; */
 }
