--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ img {
   -webkit-background-clip: text;
 } */
 
+.threads {
+  /* background: #007bb5; */
+  /* background: #111111; */
+}
+
 .tiktok {
   /* background: #007bb5; */
   /* background: #111111; */
